--- a/.github/workflows/post-merge-image-build.yml
+++ b/.github/workflows/post-merge-image-build.yml
@@ -46,7 +46,7 @@ jobs:
       id: vars
       shell: bash
       run: |
-        echo "##[set-output name=tagname;]$(echo `git describe`)"
+        echo "##[set-output name=tagname;]$(git describe)"
     - name: Save curation app version to be deployed in EB env variables through config file
       run: |
         cat .ebextensions/version.config
